# hai-os-simpleXL

./: .clang-tidy  .gitignore  ARCHITECTURAL_IMPROVEMENTS_README.md  BAO_CAO_BUILD_TEST_SIMPLEXL.md  BAO_CAO_CAI_THIEN_KIEN_TRUC_PHASE_1_2_3.md  BAO_CAO_TONG_HOP_THAY_DOI.md  BUILD_INSTRUCTIONS.md  BUILD_TEST_VERIFICATION.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DANH_SACH_FILE_THIEU_GITHUB.md  DE_XUAT_CAI_THIEN_CHATBOT_TUAN_THU_SIMPLEXL.md  DE_XUAT_CAI_THIEN_KIEN_TRUC_SIMPLEXL.md  DE_XUAT_CAI_THIEN_KIEN_TRUC_SIMPLEXL_CAP_NHAT.md  DIEU_CAN_HOC_TU_LVGL_DEMO.md  Doxyfile  GITHUB_STANDARDS_COMPLETED.md  HUONG_DAN_BOOT_MODE_CHI_TIET.md  HUONG_DAN_CHI_TIET_COPY_DEMO.md  HUONG_DAN_COPY_KHONG_CAN_CLONE.md  HUONG_DAN_COPY_MUSIC_DEMO_1_1.md  HUONG_DAN_SMOKE_TEST.md  HUONG_DAN_VAO_BOOT_MODE.md  IMPLEMENTATION_PLAN_MUSIC_DEMO_1_1.md  IMPLEMENTATION_STATUS_HYBRID_MUSIC_SCREEN.md  Kconfig.projbuild  LICENSE  MODULE_CATALOG.md  PATCH_PLAN_P0.md  PHAN_TICH_CHATBOT_SO_SANH.md  PHAN_TICH_KIEN_TRUC_SAU.md  PHAN_TICH_REPO_ZHENGHONGGE.md  PHAN_TICH_SAU_TOAN_DIEN.md  PHAN_TICH_SO_SANH_QQ71680264_VS_DEMO.md  PHAN_TICH_SO_SANH_WINAMP_VS_DEMO.md  PHAN_TICH_TAI_NGUYEN_COPY_DEMO.md  PHAN_TICH_UI_VA_SO_SANH.md  PHAN_TICH_VA_TRIEN_KHAI_CHATBOT.md  PHASE5_BACKEND_ENABLEMENT_SUMMARY.md  (+51 more)
components/sx_core/: CMakeLists.txt  Kconfig.projbuild  sx_bootstrap.c  sx_dispatcher.c  sx_error_handler.c  sx_event_handler.c  sx_event_string_pool.c  sx_lazy_loader.c  sx_metrics.c  sx_orchestrator.c  sx_selftest.c  sx_service_if.c
components/sx_core/include/: sx_bootstrap.h  sx_dispatcher.h  sx_error_handler.h  sx_event.h  sx_event_handler.h  sx_event_payloads.h  sx_event_ranges.h  sx_event_string_pool.h  sx_lazy_loader.h  sx_metrics.h  sx_orchestrator.h  sx_selftest.h  sx_service_if.h  sx_state.h  sx_state_helper.h  sx_ui_state.h
components/sx_core/sx_event_handlers/: audio_handler.c  chatbot_handler.c  event_handlers.h  event_handlers_ota.c  radio_handler.c  ui_input_handler.c
components/sx_platform/: CMakeLists.txt  idf_component.yml  sx_platform.c  sx_platform_volume.c  sx_spi_bus_manager.c
components/sx_platform/include/: sx_platform.h  sx_platform_volume.h  sx_spi_bus_manager.h
components/sx_services/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  sx_audio_afe.c  sx_audio_afe_esp_sr.cpp  sx_audio_buffer_pool.c  sx_audio_crossfade.c  sx_audio_ducking.c  sx_audio_eq.c  sx_audio_power.c  sx_audio_profiler.c  sx_audio_protocol_bridge.c  sx_audio_recovery.c  sx_audio_reverb.c  sx_audio_router.c  sx_audio_service.c  sx_audio_service_lifecycle.c  sx_bluetooth_service.c  sx_chatbot_service.c  sx_codec_aac.c  sx_codec_detector.c  sx_codec_flac.c  sx_codec_mp3.c  sx_codec_opus.c  sx_codec_opus_decoder_wrapper.cpp  sx_codec_opus_wrapper.cpp  sx_diagnostics_service.c  sx_display_service.c  sx_geocoding.c  sx_image_service.c  sx_intent_service.c  sx_ir_codes.c  sx_ir_service.c  sx_jpeg_encoder.c  sx_led_service.c  sx_mcp_server.c  sx_mcp_tools.c  sx_mcp_tools_device.c  sx_mcp_tools_ir.c  sx_mcp_tools_navigation.c  (+30 more)
components/sx_services/include/: sx_audio_afe.h  sx_audio_buffer_pool.h  sx_audio_crossfade.h  sx_audio_ducking.h  sx_audio_eq.h  sx_audio_power.h  sx_audio_profiler.h  sx_audio_protocol_bridge.h  sx_audio_recovery.h  sx_audio_reverb.h  sx_audio_router.h  sx_audio_service.h  sx_bluetooth_service.h  sx_chatbot_service.h  sx_codec_aac.h  sx_codec_detector.h  sx_codec_flac.h  sx_codec_mp3.h  sx_codec_opus.h  sx_diagnostics_service.h  sx_display_service.h  sx_geocoding.h  sx_image_service.h  sx_intent_service.h  sx_ir_service.h  sx_jpeg_encoder.h  sx_led_service.h  sx_mcp_server.h  sx_mcp_tools.h  sx_media_metadata.h  sx_music_online_service.h  sx_navigation_ble.h  sx_navigation_ble_parser.h  sx_navigation_icon_cache.h  sx_navigation_service.h  sx_network_optimizer.h  sx_ogg_parser.h  sx_ota_full.hpp  sx_ota_full_service.h  sx_ota_service.h  (+15 more)
components/sx_services/sx_service_helpers/: sx_http_client.cpp  sx_http_client.hpp
components/sx_ui/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  sx_lvgl_guard.c  sx_lvgl_lock.c  sx_screen_if.c  sx_ui_task.c  ui_animations.c  ui_icons.c  ui_router.c  ui_screen_registry.c
components/sx_ui/assets/: img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_cover_1_large.c  img_lv_demo_music_cover_2.c  img_lv_demo_music_cover_2_large.c  img_lv_demo_music_cover_3.c  img_lv_demo_music_cover_3_large.c  img_lv_demo_music_icon_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_logo.c  img_lv_demo_music_slider_knob.c  img_lv_demo_music_slider_knob_large.c  (+5 more)
components/sx_ui/include/: sx_lvgl.h  sx_lvgl_guard.h  sx_lvgl_lock.h  sx_screen_if.h  sx_ui.h  sx_ui_router.h  ui_animations.h  ui_icons.h  ui_router.h  ui_screen_registry.h
components/sx_ui/screens/: register_all_screens.c  register_all_screens.h  screen_about.c  screen_about.h  (+73 more)
test/unit_test/: BUILD_TEST.md  CMakeLists.txt  build.ps1  test_architecture_compliance.c  test_dispatcher.c  test_dispatcher.h  test_event_handler.c  test_event_performance.c  test_event_priority.c  test_state.c  test_state.h  test_string_pool_metrics.c
(+1888 files in other folders)
