idf_component_register(
    SRCS
           "sx_service_helpers/sx_http_client.cpp"
           "sx_audio_service.c"
               "sx_audio_eq.c"
               "sx_audio_reverb.c"
               "sx_audio_ducking.c"
               "sx_audio_crossfade.c"
               "sx_playlist_manager.c"
               "sx_media_metadata.c"
               "sx_sd_service.c"
               "sx_sd_music_service.c"
               "sx_radio_service.c"
               "sx_music_online_service.c"
        "sx_codec_aac.c"
        "sx_codec_mp3.c"
        "sx_codec_flac.c"
        "sx_codec_detector.c"
        "sx_audio_buffer_pool.c"
        "sx_tts_service.c"
        "sx_audio_profiler.c"
        "sx_audio_router.c"
        "sx_audio_power.c"
        "sx_diagnostics_service.c"
        "sx_ogg_parser.c"
        "sx_bluetooth_service.c"
        "sx_telegram_service.c"
        "sx_navigation_service.c"
        "sx_ir_service.c"
        "sx_ir_codes.c"
        "sx_chatbot_service.c"
        "sx_mcp_server.c"
        "sx_mcp_tools.c"
        "sx_mcp_tools_device.c"
        "sx_mcp_tools_radio.c"
        "sx_mcp_tools_navigation.c"
        "sx_mcp_tools_ir.c"
        "sx_navigation_ble.c"
        "sx_navigation_ble_parser.c"
        "sx_navigation_icon_cache.c"
        "sx_geocoding.c"
        "sx_wifi_service.c"
        "sx_audio_mixer.c"
        ../sx_protocol/sx_protocol_ws.c
        ../sx_protocol/sx_protocol_mqtt.c
        ../sx_protocol/sx_protocol_mqtt_udp.c
        ../sx_protocol/sx_protocol_factory.c
        ../sx_protocol/sx_protocol_common.c
        "sx_settings_service.c"
        "sx_network_optimizer.c"
        "sx_ota_service.c"
        "sx_ota_full_service.cpp"
        "sx_ota_full.cpp"
               "sx_intent_service.c"
               "sx_weather_service.c"
               "sx_theme_service.c"
               "sx_image_service.c"
               "sx_qr_code_service.c"
               "sx_stt_service.c"
               "sx_codec_opus.c"
               "sx_codec_opus_wrapper.cpp"
               "sx_codec_opus_decoder_wrapper.cpp"
               "sx_audio_afe.c"
               "sx_audio_afe_esp_sr.cpp"
               "sx_wake_word_service.c"
               "sx_wake_word_esp_sr.cpp"
               "sx_audio_recovery.c"
               "sx_led_service.c"
               "sx_power_service.c"
               "sx_state_manager.c"
               "sx_audio_protocol_bridge.c"
               "sx_display_service.c"
               "sx_jpeg_encoder.c"
    INCLUDE_DIRS
        "include"
        "sx_service_helpers"
        "../sx_protocol/include"
    REQUIRES
        sx_core
        sx_codec_common
        fatfs
        sdmmc
        driver
        esp_http_client
        esp_wifi
        esp_netif
        esp_event
        esp_https_ota
        esp_audio_codec
        json
        nvs_flash
        mqtt
        esp-dsp
    PRIV_REQUIRES
        bt
        app_update
)

