idf_component_register(
    SRCS
        "sx_ui_task.c"
        "ui_router.c"
        "ui_screen_registry.c"
        "ui_icons.c"
        "screens/screen_common.c"
        "screens/screen_boot.c"
        "screens/screen_flash.c"
        "screens/screen_home.c"
        "screens/screen_chat.c"
        "screens/screen_settings.c"
        "screens/screen_wakeword_feedback.c"
        "screens/screen_music_online_list.c"
        "screens/screen_music_player.c"
        "screens/screen_radio.c"
        "screens/screen_sd_card_music.c"
        "screens/screen_ir_control.c"
        "screens/screen_wifi_setup.c"
        "screens/screen_display_setting.c"
        "screens/screen_bluetooth_setting.c"
        "screens/screen_equalizer.c"
        "screens/screen_ota.c"
        "screens/screen_about.c"
        "screens/screen_google_navigation.c"
        "screens/screen_permission.c"
        "screens/screen_screensaver.c"
        "screens/screen_screensaver_setting.c"
        "screens/screen_audio_effects.c"
        "screens/screen_startup_image_picker.c"
        "screens/screen_voice_settings.c"
        "screens/screen_network_diagnostic.c"
        "screens/screen_snapshot_manager.c"
        "screens/screen_diagnostics.c"
        "screens/screen_introspection.c"
        "screens/screen_dev_console.c"
        "screens/screen_touch_debug.c"
        "screens/register_all_screens.c"
        "ui_verify/sx_ui_verify.c"
        "ui_animations.c"
    INCLUDE_DIRS
        "include"
        "ui_verify"
    REQUIRES
        sx_core
        sx_platform
        sx_assets
        esp_lvgl_port
)
